still trying to fix the whitespace problem

--- a/src/sigal/themes/galleria/static/css/style.css
+++ b/src/sigal/themes/galleria/static/css/style.css
@@ -117,7 +117,6 @@ header h1 a:hover, header h2 a:hover {
 #gallery {
   line-height: 0;
   width: 100%;
-  height: 600px;
   clear: both;
 }
 #gallery video {
